objects/Trip__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <label>Return</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCurrency__c</fullName>
        <label>TotalCurrency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Request</label>
        <referenceTo>Travel_Request__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>